[package]
name = "images_matching_subdirectories"
version = "0.1.0"
authors = ["Frederick Price <fprice@pricemail.ca>"]
edition = "2024"
license = "MIT"
description = "Find images inside named subdirectories of a parent directory"
homepage = "https://github.com/rickprice/images_matching_subdirectories"
repository = "https://github.com/rickprice/images_matching_subdirectories"
keywords = ["images","backgrounds"]
categories = ["multimedia::images"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.0"
rand = "0.8"
